--- a/package.json
+++ b/package.json
@@ -13,10 +13,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
-    "react-search-box": "^3.0.0",
-    "react-select": "^5.8.0",
-    "react-select-async-paginate": "^0.7.3",
-    "styled-components": "^6.1.8"
+    "react-search-box": "^3.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
